<?xml version="1.0"?>
<package format="3">
  <name>f1tenth_route_planning</name>
  <version>0.0.1</version>
  <description>A* global planner + pure pursuit (map→base_link)</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>ackermann_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>std_srvs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
